# fluent_python

./: README.md  pyproject.toml
.github/workflows/: test.yaml
src/fluent_python/: __init__.py  dataclassses.py  dicts.py  match_case.py  refs_muts_recycle.py
src/fluent_python/chapter_1/: collection_api.py
src/fluent_python/data_structures/: collection_api.py  match_case.py
