[project]
name = "fluent-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "fubblea", email = "ajay.arthur@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
